--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 }
 
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 25px;
   background-color: bisque;
 }
@@ -18,7 +21,7 @@
   background-color: whitesmoke;
   height: 5rem;
   width: 45rem;
-  padding: 1rem 5rem;
+  padding: 0.4rem 5rem 2rem;
   margin: 2.5rem 0;
   border-radius: 25px;
 }
@@ -38,7 +41,6 @@
 .inputBox:focus {
   font-size: 35px;
   border: 0.5 solid grey;
-
 }
 
 .myInput:focus {
