Rendering username with props

--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,11 @@
   margin: 0 16rem;
 }
 
-.inputBox:focus {
+/* .inputBox:focus {
   font-size: 35px;
   border: 0.5 solid grey;
 }
 
 .myInput:focus {
   border: 1px solid plum;
-}
+} */
